--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,3 +8,19 @@ pull_request_rules:
       merge:
         strict: smart
         method: squash
+  - name: warn on conflicts
+    conditions:
+      - conflict
+    actions:
+      comment:
+        message: "@{{author}} this pull request is now in conflict 😩"
+      label:
+        add:
+          - conflict
+  - name: remove conflict label if not needed
+    conditions:
+      - -conflict
+    actions:
+      label:
+        remove:
+          - conflict
