feat(profiling): support most uwsgi modes (#1953)
* tests(profiling): disable coverage for subprocesses

Profiling tests use subprocesses in several cases which might mess with
coverage. Let's disable coverage in Python subprocesses.

* feat(profiling): support most uwsgi modes

This adds support for many of the uWSGI configuration mode (master, lazy-apps,
multi process, etc) by introspecting uWSGI options and leveraging its hooks.

This makes sure the profiler is correctly started in the children processes
even when started from the master/parent process.

--- a/tox.ini
+++ b/tox.ini
@@ -174,6 +174,7 @@ deps =
 # used to test our custom msgpack encoder
     integration: msgpack
     profile: pytest-benchmark
+    profile: uwsgi
     profile-minreqs: protobuf==3.0.0
     profile-minreqs: tenacity==5.0.1
     profile-!minreqs-gevent: gevent
