Migrate elasticsearch from tox to riot (#2004)
* Migrate elasticsearch from tox to riot

* expand versions tested

* only test 3.9 for >= 7.6.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -623,8 +623,8 @@ jobs:
       - image: *ddtrace_dev_image
       - image: *elasticsearch_image
     steps:
-      - run_tox_scenario:
-          pattern: '^elasticsearch_contrib-'
+      - run_test:
+          pattern: 'elasticsearch'
 
   falcon:
     <<: *contrib_job
