--- a/tox.ini
+++ b/tox.ini
@@ -391,7 +391,7 @@ passenv=
     CI_*
     CIRCLECI
     CIRCLE_*
-
+    DD_TRACE_AGENT_URL
 
 commands =
 # run only essential tests related to the tracing client
