ci: fix flaky cherrypy tests, use riot, snapshots (#1998)
* cherrypy: port cherrypy tests to riot

* remove time assertions; add snapshot tests

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -630,10 +630,12 @@ jobs:
           pattern: '^celery_contrib-'
 
   cherrypy:
-    <<: *contrib_job
+    <<: *machine_executor
+    parallelism: 6
     steps:
-      - run_tox_scenario:
-          pattern: '^cherrypy_contrib-'
+      - run_test:
+          pattern: 'cherrypy'
+          snapshot: true
 
   consul:
     <<: *contrib_job
