tests(sanic): pin pytest-sanic version (#2076)

--- a/tox.ini
+++ b/tox.ini
@@ -331,7 +331,7 @@ deps =
     rediscluster136: redis-py-cluster>=1.3.6,<1.3.7
     rediscluster200: redis-py-cluster>=2.0.0,<2.1.0
     rediscluster210: redis-py-cluster>=2.1.0,<2.2.0
-    sanic_contrib: pytest-sanic
+    sanic_contrib: pytest-sanic==1.6.2
     sanic_contrib: pytest-asyncio
     sanic1906: sanic~=19.6.0
     sanic1906: httpx
