ci(flask): support for Flask 1.1 and Python > 3.6 (#2154)
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ envlist =
     dogpile_contrib-py{36,37,38,39}-dogpilecache{06,07,08,09,10,}
     falcon_contrib{,_autopatch}-{py27,py35,py36,py37}-falcon{10,11,12,13,14}
     falcon_contrib{,_autopatch}-{py35,py36,py37}-falcon{20}
-    flask_contrib{,_autopatch}-{py27,py35,py36}-flask{010,011,012,10}-blinker-pytest3
+    flask_contrib{,_autopatch}-{py27,py35,py36,py37,py38,py39}-flask{010,011,012,10,11,}-blinker-pytest3
 # Flask <=0.9 does not support Python 3
     flask_contrib{,_autopatch}-{py27}-flask{09}-blinker-pytest3
     flask_cache_contrib-py{27,35,36,37,38,39}-flask{010,011,012}-flaskcache{013}-memcached-redis{210}-blinker-pytest3
@@ -243,6 +243,8 @@ deps =
     flask011: Werkzeug<1
     flask012: flask>=0.12,<0.13
     flask10: flask>=1.0,<1.1
+    flask11: flask>=1.1,<1.2
+    flask: flask>=1.1
     flaskcache012: flask_cache>=0.12,<0.13
     flaskcache013: flask_cache>=0.13,<0.14
     futures: futures
