Move Flask and Flask-Cache tests to riot (#2160)
* Move Flask and Flask-Cache tests to riot

* fix string

* fix replacement

* fix up comments

* Add back necessary pytest 3

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -705,8 +705,9 @@ jobs:
       - image: *redis_image
       - image: *memcached_image
     steps:
-      - run_tox_scenario:
-          pattern: '^flask_\(cache_\)\?contrib\(_autopatch\)\?-'
+      - run_test:
+          # Run both flask and flask_cache test suites
+          pattern: 'flask(_cache)?'
 
   gevent:
     <<: *contrib_job
