--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,7 @@
 [mypy]
 files = ddtrace/profiling
 show_error_codes = true
+warn_unused_ignores = true
+warn_unused_configs = true
 # Not supported yet
 # exclude = ddtrace/vendors
