--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = ddtrace/profiling
+files = ddtrace/profiling, ddtrace/*.py
 show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
