Black and Riot mako (#2183)
* Black and Riot mako

* fix flake8

* fix flake8 issues

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -998,8 +998,8 @@ jobs:
   mako:
     <<: *contrib_job
     steps:
-      - run_tox_scenario:
-          pattern: '^mako_contrib-'
+      - run_test:
+          pattern: 'mako'
 
   algoliasearch:
     <<: *contrib_job
