--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,7 @@ exclude = '''
   | ddtrace/(
     contrib/
     (
-      aiobotocore
-      | aiopg
+      aiopg
       | boto
       | cassandra
       | dbapi
@@ -62,8 +61,7 @@ exclude = '''
   (
     contrib/
     (
-      aiobotocore
-      | aiopg
+      aiopg
       | boto
       | cassandra
       | config.py
