style(aws): add type hints to ext.aws (#2199)
This change adds type hints to ext.aws and is motivated by the lookups
done in add_span_arg_tags to encourage the use of hash sets for the
args_traced argument.

Requires aiobotocore and boto to be formatted (will be dealt with in
dedicated PRs).

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = ddtrace/profiling, ddtrace/*.py
+files = ddtrace/profiling, ddtrace/*.py, ddtrace/ext/aws.py
 show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
