Adding urllib3 integration (#1148)
* draft of urllib3 integration

* black formatting

* set request tags on the span before the call is made in case of errors

* rename span name and support retry tags based on CR feedback

* add tests and fix a few small bugs

* fix flake8

* add tests and circleci config

* flake8 fixes

* Update ddtrace/contrib/urllib3/__init__.py

Co-Authored-By: Tahir H. Butt <tahir.butt@datadoghq.com>

* use dd compat for urlparse and unparse

* use SpanType constants for type of span

use SpanTypes.HTTP

* fix tests

* fix flake8 from merge conflict resolution

* adapt to latest changes on master

* adopt latest standards for integrations

Use Pin to add patch information to urllib3 requests. Also use riot for configuring the test environment

* apply checklist points

* wip: make tests pass

* set tags on exception

also fixed the tests to override HTTP configuration where required

* docs(urllib3): add urllib3 integration docs

* fix service name handling

* fix copy-pasta errors and improve documentation

* Update ddtrace/contrib/urllib3/__init__.py

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* Update riotfile.py

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* remove unused imports from test sources

* use the new get_argument_value utility

* Update tests/contrib/urllib3/test_urllib3.py

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* Update ddtrace/contrib/urllib3/patch.py

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* commit Tahir's suggestions

* fix TracerTestCase import

Co-authored-by: Tahir H. Butt <tahir.butt@datadoghq.com>
Co-authored-by: Gabriele N. Tornetta <gabriele.tornetta@datadoghq.com>
Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -928,6 +928,16 @@ jobs:
           wait: rediscluster
           pattern: '^rediscluster_contrib-'
 
+  urllib3:
+    <<: *contrib_job
+    docker:
+      - image: *ddtrace_dev_image
+      - *httpbin_local
+    resource_class: *resource_class
+    steps:
+      - run_test:
+          pattern: 'urllib3'
+
   vertica:
     <<: *contrib_job
     docker:
@@ -1106,6 +1116,7 @@ requires_tests: &requires_tests
     - test_logging
     - tracer
     - tornado
+    - urllib3
     - vertica
     - wsgi
     - build-docker-ci-image
@@ -1209,6 +1220,7 @@ workflows:
       - test_logging: *requires_pre_test
       - tornado: *requires_pre_test
       - tracer: *requires_pre_test
+      - urllib3: *requires_pre_test
       - vertica: *requires_pre_test
       - wsgi: *requires_pre_test
       - build-docker-ci-image: *requires_pre_test
