chore(mypy): disable implicit optional (#2275)

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,6 @@ files = ddtrace/profiling, ddtrace/*.py, ddtrace/ext/aws.py, ddtrace/internal/*.
 show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
+no_implicit_optional = true
 # Not supported yet
 # exclude = ddtrace/vendors
