style(utils): add type hints to utils (#2257)
* style(utils): add type hints to utils

* fix typing for from_env

* fix typing in wrappers.py

* remove unused type alias

* fix more get_env type checks

* add missing return in local from_env function

Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = ddtrace/profiling, ddtrace/*.py, ddtrace/ext/aws.py, ddtrace/internal/*.py
+files = ddtrace/profiling, ddtrace/*.py, ddtrace/utils/*.py, ddtrace/ext/aws.py, ddtrace/internal/*.py
 show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
