perf: cache http data (#2290)
* perf: cache http data

This change aims at improving performance of integrations that juggle
HTTP data, like headers and error codes. For this to work, the
assumption that customisation is set once at start-up, before any of the
cached functions are called, **must** hold true. Otherwise, this is
bound to become a subtle source of bugs.

* Use dedicated cache for error code range parsing

Some code has been reshuffled around to avoid circular imports

* ensure per-instance method caching

* add type hints and more caching

* add tests for the new caching utils

* reuse caching code for methods

* pytest plugin to invalidate caches between tests

* add docstring to cached decorator

* fix docstring typo

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/tox.ini
+++ b/tox.ini
@@ -374,7 +374,7 @@ commands =
     mysql_contrib: pytest {posargs} tests/contrib/mysql
     mysqldb_contrib: pytest {posargs} tests/contrib/mysqldb
     pylibmc_contrib: pytest {posargs} tests/contrib/pylibmc
-    pylons_contrib: pytest {posargs} tests/contrib/pylons
+    pylons_contrib: python -m pytest {posargs} tests/contrib/pylons
     pymemcache_contrib: pytest {posargs} --ignore="tests/contrib/pymemcache/autopatch" tests/contrib/pymemcache/
     pymemcache_contrib_autopatch: python tests/ddtrace_run.py pytest {posargs} tests/contrib/pymemcache/autopatch/
     pymysql_contrib: pytest {posargs} tests/contrib/pymysql
@@ -409,7 +409,7 @@ ignore_outcome=true
 # DEV: We use `conftest.py` as a local pytest plugin to configure hooks for collection
 [pytest]
 # --cov-report is intentionally empty else pytest-cov will default to generating a report
-addopts = --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
+addopts = -p tests.cache.conftest --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
 # DEV: The default is `test_*\.py` which will miss `test.py` files
 python_files = test*\.py
 filterwarnings =
