--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,5 @@
 version: 2.1
 
-s3_dir_dev: &s3_dir_dev trace-dev
-s3_dir_prod: &s3_dir_prod trace
-s3_bucket: &s3_bucket pypi.datadoghq.com
-
 resource_class: &resource_class medium
 cimg_base_image: &cimg_base_image cimg/base:stable
 python38-alpine_image: &python38-alpine_image python:3.8-alpine
@@ -50,39 +46,6 @@ contrib_job: &contrib_job
   parallelism: 4
 
 commands:
-  deploy_docs:
-    description: "Deploy docs"
-    parameters:
-      s3_dir:
-        type: string
-      s3_bucket:
-        type: string
-        default: *s3_bucket
-    steps:
-      - build_docs
-      - run: pip install awscli
-      - run:
-          name: Release docs
-          command: aws s3 cp --recursive docs/_build/html/ "s3://<< parameters.s3_bucket >>/<< parameters.s3_dir >>/docs/"
-
-  deploy_wheels:
-    description: "Deploy wheels"
-    parameters:
-      s3_dir:
-        type: string
-        default: *s3_dir_dev
-      s3_bucket:
-        type: string
-        default: *s3_bucket
-    steps:
-      - run: pip install awscli cython mkwheelhouse
-      - run:
-          name: Release wheels to dev site
-          command: scripts/mkwheelhouse
-          environment:
-            S3_DIR: << parameters.s3_dir >>
-            S3_BUCKET: << parameters.s3_bucket >>
-
   save_coverage:
     description: "Save coverage.py results to workspace"
     steps:
@@ -310,13 +273,6 @@ executors:
 httpbin_local: &httpbin_local
   image: *httpbin_image
   name: httpbin.org
-
-deploy_docs_filters: &deploy_docs_filters
-  filters:
-    tags:
-      only: /(^docs$)|(^v[0-9]+(\.[0-9]+)*$)/
-    branches:
-      ignore: /.*/
 
 datadog_agent: &datadog_agent
   image: *datadog_agent_image
@@ -948,23 +904,6 @@ jobs:
           store_coverage: false
           pattern: '^benchmarks'
 
-  deploy_master:
-    # build the master branch releasing development docs and wheels
-    <<: *machine_executor
-    steps:
-      - checkout
-      - *pyenv-set-global
-      - deploy_docs:
-          s3_dir: *s3_dir_dev
-      - deploy_wheels
-
-  deploy_staging:
-    <<: *machine_executor
-    steps:
-      - checkout
-      - *pyenv-set-global
-      - deploy_wheels
-
   jinja2:
     <<: *contrib_job
     steps:
@@ -984,7 +923,7 @@ jobs:
           pattern: '^algoliasearch_contrib-'
 
   build_docs:
-    # deploy official documentation
+    # build documentation and store as an artifact
     <<: *machine_executor
     steps:
       - checkout
@@ -996,14 +935,6 @@ jobs:
              cp -r docs/_build/html/* /tmp/docs
       - store_artifacts:
           path: /tmp/docs
-
-  deploy_docs:
-    # deploy official documentation
-    executor: python38
-    steps:
-      - checkout
-      - deploy_docs:
-          s3_dir: *s3_dir_prod
 
 requires_pre_test: &requires_pre_test
   requires:
@@ -1085,20 +1016,6 @@ requires_tests: &requires_tests
 
 workflows:
   version: 2
-
-  deploy_docs:
-    jobs:
-      - build_docs:
-          <<: *deploy_docs_filters
-      - approve_docs_deployment:
-          <<: *deploy_docs_filters
-          type: approval
-          requires:
-            - build_docs
-      - deploy_docs:
-          <<: *deploy_docs_filters
-          requires:
-            - approve_docs_deployment
   test:
     jobs:
       # Jobs that should run before individual integration test suites
@@ -1179,11 +1096,3 @@ workflows:
       - wsgi: *requires_pre_test
       - build-docker-ci-image: *requires_pre_test
       - coverage_report: *requires_tests
-      - deploy_master:
-          filters:
-            branches:
-              only: master
-      - deploy_staging:
-          filters:
-            branches:
-              only: staging
