--- a/tox.ini
+++ b/tox.ini
@@ -251,8 +251,8 @@ deps =
     molten07: molten>=0.7,<0.8
     molten10: molten>=1.0,<1.1
     mongoengine: mongoengine
-    mysqlconnector: mysql-connector-python
-    mysqlconnector80: mysql-connector-python>=8.0,<8.1
+    mysqlconnector: mysql-connector-python<8.0.24
+    mysqlconnector80: mysql-connector-python>=8.0,<8.0.24
     mysqldb: mysql-python
     mysqldb12: mysql-python>=1.2,<1.3
     mysqlclient: mysqlclient
