Fix urllib3 patching not activating tracing (#2349)
* Fix urllib3 patching not activating tracing

* remove unused import

* update circleci job

* Always use docker-compose httpbin for urllib3 tests

* forgot to checkout the code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -851,14 +851,14 @@ jobs:
           pattern: '^rediscluster_contrib-'
 
   urllib3:
-    <<: *contrib_job
-    docker:
-      - image: *ddtrace_dev_image
-      - *httpbin_local
-    resource_class: *resource_class
+    <<: *machine_executor
     steps:
+      - checkout
+      # `snapshot: true` will run `docker-compose logs -f` for us
+      - run: docker-compose up -d httpbin_local
       - run_test:
           pattern: 'urllib3'
+          snapshot: true
 
   vertica:
     <<: *contrib_job
