--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,5 +139,11 @@ services:
           - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
           - "/var/run/docker.sock:/var/run/docker.sock"
 
+    httpbin_local:
+      image: kennethreitz/httpbin@sha256:2c7abc4803080c22928265744410173b6fea3b898872c01c5fd0f0f9df4a59fb
+      ports:
+        - "127.0.0.1:8001:80"
+
+
 volumes:
     ddagent:
