ci(mysql): move mysql tests to riot (#2340)
* ci(mysql): move mysql tests to riot

* fix CircleCI configuration

* Update riotfile.py

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* use correct package name

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -640,9 +640,9 @@ jobs:
       - image: *ddtrace_dev_image
       - *mysql_server
     steps:
-      - run_tox_scenario:
+      - run_test:
           wait: mysql
-          pattern: '^mysql_contrib-.*-mysqlconnector'
+          pattern: 'mysql'
 
   mysqlpython:
     <<: *contrib_job
