--- a/tox.ini
+++ b/tox.ini
@@ -327,6 +327,7 @@ deps =
     vertica060: vertica-python>=0.6.0,<0.7.0
     vertica070: vertica-python>=0.7.0,<0.8.0
     webtest: WebTest
+    asyncio_contrib: pytest-asyncio
 
 # pass along test env variables
 passenv=
