refactor(opentracer_asyncio): remove asyncio.coroutine usage (#2368)
This move the tests to use more modern approach to running asyncio-based tests.

Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -328,6 +328,7 @@ deps =
     vertica070: vertica-python>=0.7.0,<0.8.0
     webtest: WebTest
     asyncio_contrib: pytest-asyncio
+    opentracer_asyncio: pytest-asyncio
 
 # pass along test env variables
 passenv=
