--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,18 @@
 [mypy]
-files = ddtrace/profiling, ddtrace/*.py, ddtrace/utils/*.py, ddtrace/ext/aws.py, ddtrace/internal/*.py
+files = ddtrace
 show_error_codes = true
 warn_unused_ignores = true
 warn_unused_configs = true
 no_implicit_optional = true
-# Not supported yet
-# exclude = ddtrace/vendors
+
+[mypy-ddtrace.contrib.*]
+ignore_errors = true
+
+[mypy-ddtrace.vendor.*]
+ignore_errors = true
+
+[mypy-ddtrace.opentracer.*]
+ignore_errors = true
+
+[mypy-ddtrace.bootstrap.*]
+ignore_errors = true
