--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ envlist =
     aiobotocore_contrib-{py35}-aiobotocore{02,03,04,05,07,08,09,010,011}
     aiobotocore_contrib-{py36}-aiobotocore{02,03,04,05,07,08,09,010,011,012}
     # aiobotocore 0.2 and 0.4 do not work because they use async as a reserved keyword
-    aiobotocore_contrib-py{37,38,39}-aiobotocore{03,05,07,08,09,010,011,012}
+    aiobotocore_contrib-py{37,38}-aiobotocore{03,05,07,08,09,010,011,012}
+    aiobotocore_contrib-py39-aiobotocore{010,011,012}
     # Python 3.7 needs at least aiohttp 2.3
     aiohttp_contrib-{py35,py36}-aiohttp{12,13,20,21,22}-aiohttp_jinja{012,013}-yarl-pytest3
     aiohttp_contrib-{py35,py36,py37,py38}-aiohttp23-aiohttp_jinja015-yarl10-pytest3
@@ -351,8 +352,8 @@ commands =
     opentracer_gevent: pytest {posargs} tests/opentracer/test_tracer_gevent.py
     integration-{v5,latest,snapshot}: pytest --no-cov {posargs} tests/integration/
 # Contribs
-    aiobotocore_contrib-{py35,py36,py37,py38}: pytest {posargs} tests/contrib/aiobotocore
-    aiopg_contrib-{py35,py36,py37,py38}: pytest {posargs} tests/contrib/aiopg
+    aiobotocore_contrib: pytest {posargs} tests/contrib/aiobotocore
+    aiopg_contrib: pytest {posargs} tests/contrib/aiopg
     aiohttp_contrib: pytest {posargs} tests/contrib/aiohttp
     algoliasearch_contrib: pytest {posargs} tests/contrib/algoliasearch
     asyncio_contrib: pytest {posargs} tests/contrib/asyncio
