refactor(aiobotocore): replace asyncio.coroutine with async def (#2388)
This removes Python 3.4 compat code and brings Python 3.10 on the table.

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -330,6 +330,7 @@ deps =
     webtest: WebTest
     asyncio_contrib: pytest-asyncio
     opentracer_asyncio: pytest-asyncio
+    aiobotocore_contrib: pytest-asyncio
 
 # pass along test env variables
 passenv=
