fix(grpc): no package in method service (#2384)
* fix(grpc): add snapshot test for method service metadata

* handle empty method package

* revert change to host parsing

* add release note

* use async_mode

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -622,11 +622,12 @@ jobs:
           pattern: '^httplib_contrib'
 
   grpc:
-    <<: *contrib_job
+    <<: *machine_executor
     parallelism: 6
     steps:
       - run_test:
           pattern: "grpc"
+          snapshot: true
 
   molten:
     <<: *contrib_job
