fix(profiling): remove protobuf warning for protobuf >= 3.12 users (#2374)
Protobuf 3.12 deprecated part of its API and the protobuf shipped file for the
profiler triggers a bunch of warnings:

ddtrace/profiling/exporter/pprof_pb2.py:18
  ddtrace/profiling/exporter/pprof_pb2.py:18: DeprecationWarning: Call to deprecated create function FileDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.
    DESCRIPTOR = _descriptor.FileDescriptor(

This change update the pprof_pb2 file for using protobuf 3.12 and later API. It
still allows to use the older file for users with an older protobuf version.

This introduce a runtime dependency on the `packaging` package which is already
pulled by other dependencies.

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ exclude = '''
       | pylibmc
       | rediscluster
     )
-    | profiling/exporter/pprof_pb2.py$
+    | profiling/exporter/pprof_.*pb2.py$
     | vendor/
   )
   | tests/
