--- a/tox.ini
+++ b/tox.ini
@@ -427,6 +427,7 @@ exclude=
   # We shouldn't lint our vendored dependencies
   ddtrace/vendor/
   ddtrace/profiling/exporter/pprof_pb2.py
+  ddtrace/profiling/exporter/pprof_pre312_pb2.py
   tests/profiling/simple_program_gevent.py
 # Ignore:
 # A003: XXX is a python builtin, consider renaming the class attribute
