--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ envlist =
     aiohttp_contrib-{py35,py36}-aiohttp{12,13,20,21,22}-aiohttp_jinja{012,013}-yarl-pytest3
     aiohttp_contrib-{py35,py36,py37,py38}-aiohttp23-aiohttp_jinja015-yarl10-pytest3
     aiohttp_contrib-{py35,py36,py37}-aiohttp{30,31,32,33,35,36}-aiohttp_jinja{015}-yarl10-pytest3
-    aiohttp_contrib-py38-aiohttp{30,31,32,33,36}-aiohttp_jinja015-yarl10-pytest3
+    aiohttp_contrib-py{38,39}-aiohttp{30,31,32,33,36}-aiohttp_jinja015-yarl10-pytest3
     aiopg_contrib-{py35,py36}-aiopg{012,015}
     aiopg_contrib-py{37,38,39}-aiopg015
     algoliasearch_contrib-py{27,35,36,37,38,39}-algoliasearch{1,2,}
