Update pymemcache integration (#2392)
* Update pymemcache integration

* fix pymemcache circleci config

* fix mispelling

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -697,8 +697,8 @@ jobs:
       - image: *ddtrace_dev_image
       - image: *memcached_image
     steps:
-      - run_tox_scenario:
-          pattern: '^pymemcache_contrib\(_autopatch\)\?-'
+      - run_test:
+          pattern: "pymemcache"
 
   mongoengine:
     <<: *machine_executor
