ci(coverage): disable coverage (#2414)
* ci(coverage): disable coverage

Coverage is being disabled to allow the CI to finish test runs. At the
moment of making this change, the coverage tool tries to analyse .so
files from the library and fails with an encoding error.

* fix profiler to gracefully remove COV_CORE_SOURCE

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ commands:
         default: ""
       store_coverage:
         type: boolean
-        default: true
+        default: false
     steps:
       - attach_workspace:
           at: .
@@ -193,7 +193,7 @@ commands:
         default: ""
       store_coverage:
         type: boolean
-        default: true
+        default: false
     steps:
       - checkout
       - setup_tox
@@ -1096,4 +1096,4 @@ workflows:
       - wsgi: *requires_base_venvs
 
       # Final reports
-      - coverage_report: *requires_tests
+      # - coverage_report: *requires_tests
