--- a/tox.ini
+++ b/tox.ini
@@ -128,7 +128,6 @@ extras =
 
 deps =
     cython
-    pytest-cov
     pytest-mock
     opentracing
 # test dependencies installed in all envs
@@ -347,7 +346,7 @@ commands =
     opentracer_asyncio: pytest {posargs} tests/opentracer/test_tracer_asyncio.py
     opentracer_tornado-tornado{40,41,42,43,44}: pytest {posargs} tests/opentracer/test_tracer_tornado.py
     opentracer_gevent: pytest {posargs} tests/opentracer/test_tracer_gevent.py
-    integration-{v5,latest,snapshot}: pytest --no-cov {posargs} tests/integration/
+    integration-{v5,latest,snapshot}: pytest {posargs} tests/integration/
 # Contribs
     aiobotocore_contrib: pytest {posargs} tests/contrib/aiobotocore
     aiopg_contrib: pytest {posargs} tests/contrib/aiopg
@@ -404,7 +403,9 @@ ignore_outcome=true
 # DEV: We use `conftest.py` as a local pytest plugin to configure hooks for collection
 [pytest]
 # --cov-report is intentionally empty else pytest-cov will default to generating a report
-addopts = -p tests.cache.conftest --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
+# DEV: cov report is being disabled as it tries to analyze .so objects in CI runs
+# addopts = -p tests.cache.conftest --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
+addopts = -p tests.cache.conftest --durations=10 --junitxml=test-results/junit.xml
 # DEV: The default is `test_*\.py` which will miss `test.py` files
 python_files = test*\.py
 filterwarnings =
