Migrate celery tests to riot (#2401)
* Migrate celery tests to riot

* update circleci config

* fix python version we test for Celery >=5.0.0

* Update riotfile.py

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

* enable celery pytest plugin for 5+

* skip old style  tests for 5.0.0

Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>
Co-authored-by: Julien Danjou <julien.danjou@datadoghq.com>
Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -533,8 +533,8 @@ jobs:
       - image: *ddtrace_dev_image
       - image: redis:4.0-alpine
     steps:
-      - run_tox_scenario:
-          pattern: '^celery_contrib-'
+      - run_test:
+          pattern: 'celery'
 
   cherrypy:
     <<: *machine_executor
