Add tests for Falcon 3.0.0 (#2402)
* Add tests for Falcon 3.0.0

* update circleci job

* ensure we patch falcon.App

* refactor tests/version usage

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -571,8 +571,8 @@ jobs:
   falcon:
     <<: *contrib_job
     steps:
-      - run_tox_scenario:
-          pattern: '^falcon_contrib'
+      - run_test:
+          pattern: 'falcon'
 
   django:
     <<: *machine_executor
