--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ envlist =
     aiobotocore_contrib-py{37,38}-aiobotocore{03,05,07,08,09,010,011,012}
     aiobotocore_contrib-py39-aiobotocore{010,011,012}
     # Python 3.7 needs at least aiohttp 2.3
-    aiohttp_contrib-{py35,py36}-aiohttp{12,13,20,21,22}-aiohttp_jinja{012,013}-yarl-pytest3
+    aiohttp_contrib-{py35,py36}-aiohttp{20,21,22}-aiohttp_jinja{012,013}-yarl-pytest3
     aiohttp_contrib-{py35,py36,py37,py38}-aiohttp23-aiohttp_jinja015-yarl10-pytest3
     aiohttp_contrib-{py35,py36,py37}-aiohttp{30,31,32,33,35,36}-aiohttp_jinja{015}-yarl10-pytest3
     aiohttp_contrib-py{38,39}-aiohttp{30,31,32,33,36}-aiohttp_jinja015-yarl10-pytest3
@@ -151,8 +151,7 @@ deps =
     aiopg012: aiopg>=0.12,<0.13
     aiopg015: aiopg>=0.15,<0.16
     aiopg: sqlalchemy
-    aiohttp12: aiohttp>=1.2,<1.3
-    aiohttp13: aiohttp>=1.3,<1.4
+    aiohttp_contrib: pytest-aiohttp
     aiohttp20: aiohttp>=2.0,<2.1
     aiohttp21: aiohttp>=2.1,<2.2
     aiohttp22: aiohttp>=2.2,<2.3
