test: add gevent + Python 3.9 testing (#2457)
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -48,6 +48,7 @@ envlist =
     gevent_contrib-py27-gevent{11,12,13}-sslmodules
     gevent_contrib-py{35,36}-gevent{11,12,13}-sslmodules3-sslmodules
     gevent_contrib-py{37,38}-gevent{13,14}-sslmodules3-sslmodules
+    gevent_contrib-py39-gevent{209,2012,211}-sslmodules3-sslmodules
     httplib_contrib-py{27,35,36,37,38,39}
     jinja2_contrib-py{27,35,36,37,38,39}-jinja{27,28,29,210,211,}
     kombu_contrib-py{27,35,36}-kombu{40,41,42,43,44,45,46,}
@@ -89,6 +90,7 @@ envlist =
     py{35,36,37,38,39}-opentracer_tornado-tornado{44,45,50,60,}
     py{27,35,36}-opentracer_gevent-gevent{11,12}
     py{37,38}-opentracer_gevent-gevent{13,14}
+    py39-opentracer_gevent-gevent{209,2012,211}
 
 isolated_build = true
 
@@ -198,6 +200,9 @@ deps =
     gevent12: gevent>=1.2,<1.3
     gevent13: gevent>=1.3,<1.4
     gevent14: gevent>=1.4,<1.5
+    gevent209: gevent>=20.9,<20.10
+    gevent2012: gevent>=20.12,<20.13
+    gevent211: gevent>=21.1,<21.2
     jinja: jinja2<3.0.0
     jinja27: jinja2>=2.7,<2.8
     jinja28: jinja2>=2.8,<2.9
