chore: move pytest tests from tox to riot (#2452)
* Moved pytest testing from tox to riot

* Updated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -689,8 +689,8 @@ jobs:
   pytest:
     executor: ddtrace_dev
     steps:
-      - run_tox_scenario:
-          pattern: '^pytest_contrib'
+      - run_test:
+          pattern: 'pytest'
 
   pymemcache:
     <<: *contrib_job
