ci: allow to use latest cryptography on Alpine (#2467)
This just pulls Rust and Cargo to allow building Cryptography latest version
which embeds some Rust code.
Alpine does not have wheels so it needs to compile everything.

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -380,7 +380,8 @@ jobs:
   test_build_alpine:
     executor: python39-alpine
     steps:
-      - run: apk add git gcc musl-dev libffi-dev openssl-dev bash
+      # Rust + Cargo are needed for Cryptography
+      - run: apk add git gcc musl-dev libffi-dev openssl-dev bash rust cargo
       - test_build
 
   tracer:
