--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -32,4 +32,4 @@ jobs:
         run: echo -e "[pytest]\nddtrace-patch-all = 1" > pytest.ini
       - name: Run tests
         # test_exception_propagation is broken upstream
-        run: tox -e py38 -- -k 'not test_exception_propagation'
+        run: tox -e py38 -- -k 'not test_exception_propagation and not test_memory_consumption'
