ci: introduce the internal DD_TESTING_RAISE variable (#2490)
This variable is meant to be used to control exceptional behaviour
and whether to let the exception bubble up or handle it and turn it
into a warning.

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>

--- a/.github/workflows/bottle.yml
+++ b/.github/workflows/bottle.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   bottle-testsuite-0_12_19:
     runs-on: ubuntu-latest
+    env:
+      DD_TESTING_RAISE: true
     defaults:
       run:
         working-directory: bottle
