--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   flask-testsuite-1_1_4:
     runs-on: ubuntu-latest
+    env:
+      DD_TESTING_RAISE: true
     defaults:
       run:
         working-directory: flask
