--- a/.github/workflows/starlette.yml
+++ b/.github/workflows/starlette.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   starlette-testsuite-0_14_2:
     runs-on: "ubuntu-latest"
+    env:
+      DD_TESTING_RAISE: true
     defaults:
       run:
         working-directory: starlette
