fix(django): fix instrumentation for multiple db backends (#2499)
* fix(django): fix instrumentation for multiple db backends

* Update releasenotes/notes/fix-django-db-connections-b9b98a7b49f27c5f.yaml

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -585,7 +585,7 @@ jobs:
       - run_test:
           pattern: 'django$'
           snapshot: true
-          docker_services: "memcached redis"
+          docker_services: "memcached redis postgres"
 
   djangorestframework:
     <<: *machine_executor
