ci: use Debian Buster image to run tests (#2477)
This is needed to deploy Python 3.10 which requires newer libssl version.

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
           - "127.0.0.1:5433:5433"
 
     testrunner:
-        image: datadog/dd-trace-py:latest
+        image: datadog/dd-trace-py:buster
         command: bash
         environment:
             - TOX_SKIP_DIST=True
