--- a/tox.ini
+++ b/tox.ini
@@ -99,6 +99,7 @@ install_command=python -m pip install --no-binary gevent {opts} {packages}
 usedevelop = true
 
 setenv =
+    DD_TESTING_RAISE=1
     profile-gevent: DD_PROFILE_TEST_GEVENT=1
     integration-v5: AGENT_VERSION=v5
     integration-latest: AGENT_VERSION=latest
