Add git metadata tags for CI providers (#2522)
* Updated CI provider test fixture files, added git metadata extraction

* Added changelog entry

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.dd-ci/ci-app-spec.json
+++ b/.dd-ci/ci-app-spec.json
@@ -10,7 +10,12 @@
   "ci.workspace_path",
   "git.branch",
   "git.commit.sha",
-  "git.repository.url",
+  "git.commit.author.name",
+  "git.commit.author.email",
+  "git.commit.committer.name",
+  "git.commit.committer.email",
+  "git.commit.message",
+  "git.repository_url",
   "git.tag",
   "pytest.result",
   "pytest.xfail.reason",
