Replaced codespell github action as riot command, added as commit hook (#2542)
* Added codespell as riot command, replaced github action with pre-commit hook

* Fixed symlink filepath

* Added configuration for codespell into setup.cfg

* Added codespell to pre-check in circleci config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,6 +302,9 @@ jobs:
       - run:
           name: "Mypy check"
           command: riot run mypy
+      - run:
+          name: "Codespell check"
+          command: riot run -s codespell
 
   ccheck:
     executor: cimg_base
