Added manual git metadata extraction for CI (#2458)
* Updated CI provider specs, updated ci-app-spec.json

* Reverted change, back to using os.path.expanduser

* Added typing

* Added author/committer name,email,date tagging

* Added testing for git info extraction.

* Refactored git metadata extraction, added tests

* Added exception handling if git executable not available

* Moved exception handling to caller (extract_git_metadata)

* Fixed tests to raise errors according to python version

* Fixed py2/py3 error compatibility.

* Reverted unnecessary dictionary reorganizing changes for separate PR.

* Updated git metadata extraction to yield and handle exceptions, and ci provider tags to not be overwritten by git tags

* Fixed typing, changed ci/git tag update to be more clear

* Reverted tag update change, git excecutable overwrites Falsey CI provider values

* Added tests for overwriting for Falsey CI provider env values

* Reverted CI provider changes and CI provided git info dependent tests

* Added test for extract_git_metadata

* Changed git extraction testing, refactored git_extract_user_info

* Fixed test git directory init

* Added integration tests for ci.tags() and git.extract_git_metadata()

* Fix typos caught by codespell

* Added docstrings to fixtures

* Added comments clarifying test fixture

* Fixed fixture name

* Fix fixture naming and references

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.dd-ci/ci-app-spec.json
+++ b/.dd-ci/ci-app-spec.json
@@ -12,8 +12,10 @@
   "git.commit.sha",
   "git.commit.author.name",
   "git.commit.author.email",
+  "git.commit.author.date",
   "git.commit.committer.name",
   "git.commit.committer.email",
+  "git.commit.committer.date",
   "git.commit.message",
   "git.repository_url",
   "git.tag",
