feat: added OS and Runtime metadata tags for CI   (#2540)
* Added configuration facet tags

* Privatized helper for os/runtime metadata

* Added test for config facet tagging

* Changed changelog to feature from 'other'

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>

--- a/.dd-ci/ci-app-spec.json
+++ b/.dd-ci/ci-app-spec.json
@@ -19,8 +19,13 @@
   "git.commit.message",
   "git.repository_url",
   "git.tag",
+  "os.architecture",
+  "os.platform",
+  "os.version",
   "pytest.result",
   "pytest.xfail.reason",
+  "runtime.name",
+  "runtime.version",
   "test.framework",
   "test.name",
   "test.skip_reason",
