fix(sanic): support version 21.x (#2240) (#2379)
* fix(sanic): support latest version (#2240)

* add a release note

* add more tests

* More tests

* rewrite release note

* Bump pytest-sanic to 1.7.1

* Fix tests & compat with older versions

* Lock deps versions in tox

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: Yun Kim <35776586+Yun-Kim@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ envlist =
     pyramid_contrib{,_autopatch}-py{27,35,36,37,38,39}-pyramid{17,18,19,110,}-webtest
     redis_contrib-py{27,35,36,37,38,39}-redis{210,30,32,33,34,35,}
     rediscluster_contrib-py{27,35,36,37,38,39}-rediscluster{135,136,200,}-redis210
-    sanic_contrib-py{37,38,39}-sanic{1906,1909,1912,2003,2006}
+    sanic_contrib-py{37,38,39}-sanic{1906,1909,1912,2003,2006,2103,}
     sqlite3_contrib-py{27,35,36,37,38,39}-sqlite3
     tornado_contrib-py{27,35,36,37,38,39}-tornado{44,45}
     tornado_contrib-py{37,38,39}-tornado{50,51,60,}
@@ -267,16 +267,28 @@ deps =
     rediscluster136: redis-py-cluster>=1.3.6,<1.3.7
     rediscluster200: redis-py-cluster>=2.0.0,<2.1.0
     rediscluster210: redis-py-cluster>=2.1.0,<2.2.0
-    sanic_contrib: pytest-sanic==1.6.2
-    sanic_contrib: pytest-asyncio
+    sanic_contrib: pytest-asyncio==0.15.1
     sanic1906: sanic~=19.6.0
-    sanic1906: httpx
+    sanic1906: pytest-sanic==1.6.2
+    sanic1906: httpx==0.9.3
     sanic1909: sanic~=19.9.0
-    sanic1909: httpx
+    sanic1909: pytest-sanic==1.6.2
+    sanic1909: httpx==0.9.3
     sanic1912: sanic~=19.12.0
+    sanic1912: pytest-sanic==1.6.2
+    sanic1912: httpx==0.9.3
     sanic2003: sanic~=20.3.0
+    sanic2003: pytest-sanic==1.6.2
+    sanic2003: httpx==0.11.1
     sanic2006: sanic~=20.6.0
+    sanic2006: pytest-sanic==1.6.2
+    sanic2006: httpx==0.11.1
+    sanic2103: sanic~=21.3.0
+    sanic2103: pytest-sanic==1.7.1
+    sanic2103: httpx==0.15.4
     sanic: sanic
+    sanic: pytest-sanic==1.7.1
+    sanic: httpx==0.15.4
     sqlalchemy: sqlalchemy
     sslmodules3: aiohttp
     sslmodules3: aiobotocore
