Chore(aiopg): format with black (#2622)
* format with black

* Replaced relative imports with absolute imports.

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,7 @@ exclude = '''
   | ddtrace/(
     contrib/
     (
-      aiopg
-      | boto
+      boto
       | pylibmc
     )
     | profiling/exporter/pprof_.*pb2.py$
@@ -52,8 +51,7 @@ exclude = '''
   (
     contrib/
     (
-      aiopg
-      | config.py
+      config.py
       | pylibmc
     )
   )
