feat(jinja2): add support for ~=3.0.0 (#2615)
* feat(jinja2): add support for ~=3.0.0

* fix Python and library version matrix

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -873,8 +873,8 @@ jobs:
   jinja2:
     <<: *contrib_job
     steps:
-      - run_tox_scenario:
-          pattern: '^jinja2_contrib-'
+      - run_test:
+          pattern: 'jinja2'
 
   mako:
     <<: *contrib_job_small
