chore(boto, contrib/config.py): Remove from black excludes (#2626)
* Removed black exclude and relative imports with absolute imports.

* Removed tests/contrib/config.py from black excludes, refactored black excludes.

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ exclude = '''
   | ddtrace/profiling/collector/_traceback.pyx$
   | ddtrace/profiling/collector/_threading.pyx$
   | ddtrace/profiling/collector/stack.pyx$
+  | ddtrace/profiling/exporter/pprof_.*pb2.py$
+  | ddtrace/vendor/
   | \.eggs
   | \.git
   | \.hg
@@ -38,22 +40,5 @@ exclude = '''
   | buck-out/
   | build/
   | dist/
-  | ddtrace/(
-    contrib/
-    (
-      boto
-      | pylibmc
-    )
-    | profiling/exporter/pprof_.*pb2.py$
-    | vendor/
-  )
-  | tests/
-  (
-    contrib/
-    (
-      config.py
-      | pylibmc
-    )
-  )
 )
 '''
