--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ lines_after_imports = 2
 force_sort_within_sections = true
 known_first_party = "ddtrace"
 default_section = "THIRDPARTY"
-skip = ["ddtrace/vendor/"]
+skip = ["ddtrace/vendor/", ".riot", ".tox", ".eggs", "build", "setup.py"]
+skip_glob = [".venv*", "ddtrace/profiling/exporter/pprof_*pb2.py"]
 line_length = 120
 
 [tool.black]
