Lint/format all Python sources in repo (#2643)
* Update linting, formatting commands

Our linting and formatting commands were not considering new
directories like benchmarks/ which also contain python code which we
should lint and format.

* format all the things

* lint all the things

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Tahir H. Butt <tahir.butt@datadoghq.com>

--- a/tox.ini
+++ b/tox.ini
@@ -385,7 +385,7 @@ filterwarnings =
 [flake8]
 max-line-length=120
 exclude=
-  .ddtox,.tox,
+  .ddtox,.tox,.riot,.venv*
   .git,__pycache__,
   .eggs,*.egg,
   build,
