--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -625,6 +625,14 @@ jobs:
           pattern: "grpc"
           snapshot: true
 
+  mariadb:
+    <<: *machine_executor
+    steps:
+      - run_test:
+          pattern: 'mariadb$'
+          snapshot: true
+          docker_services: "mariadb"
+
   molten:
     <<: *contrib_job
     steps:
@@ -946,6 +954,7 @@ requires_tests: &requires_tests
     - jinja2
     - kombu
     - mako
+    - mariadb
     - molten
     - mongoengine
     - mysqlconnector
@@ -1027,6 +1036,7 @@ workflows:
       - jinja2: *requires_base_venvs
       - kombu: *requires_base_venvs
       - mako: *requires_base_venvs
+      - mariadb: *requires_base_venvs
       - molten: *requires_base_venvs
       - mongoengine: *requires_base_venvs
       - mysqlconnector: *requires_base_venvs
