--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,15 @@ services:
             - POSTGRES_DB=postgres
         ports:
             - "127.0.0.1:5432:5432"
+    mariadb:
+        image: mariadb
+        environment:
+            - MYSQL_ROOT_PASSWORD=example
+            - MYSQL_DATABASE=test
+            - MYSQL_USER=test
+            - MYSQL_PASSWORD=test
+        ports:
+            - "127.0.0.1:3306:3306"
     mysql:
         image: mysql:5.7
         environment:
