ci: enable profiling in framework testing jobs (#2681)
This should give more chance to catch any potential issue in the profiling by
training it with more external code.

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.github/workflows/fastapi.yml
+++ b/.github/workflows/fastapi.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DD_TESTING_RAISE: true
+      DD_PROFILING_ENABLED: true
     defaults:
       run:
         working-directory: fastapi
