--- a/.github/workflows/starlette.yml
+++ b/.github/workflows/starlette.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: "ubuntu-latest"
     env:
       DD_TESTING_RAISE: true
+      DD_PROFILING_ENABLED: true
     defaults:
       run:
         working-directory: starlette
