feat(perf): add base for scenarios (#2690)
* feat(perf): add base for scenarios

* Update benchmarks/README.rst

Co-authored-by: Brett Langdon <me@brett.is>

Co-authored-by: Brett Langdon <me@brett.is>

--- a/benchmarks/base/Dockerfile
+++ b/benchmarks/base/Dockerfile
@@ -2,8 +2,7 @@ ARG PYTHON_VERSION=3.9-slim-buster
 
 FROM python:${PYTHON_VERSION} as python
 
-ARG BENCHMARK=sample
-ARG ARTIFACTS=/artifacts
+ARG SCENARIO=base
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -22,27 +21,22 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
 
-# sirun
-RUN curl -sL https://github.com/DataDog/sirun/releases/download/v0.1.8/sirun-v0.1.8-x86_64-unknown-linux-gnu.tar.gz | tar zxf - -C /tmp && mv /tmp/sirun /usr/bin
+# Add base common files used by all scenarios
+COPY ./base/ /app/
 
-COPY ./common/entrypoint /app/
-COPY ./common/benchmark /app/
+# Add scenario code, overriding anything from base
+COPY ./${SCENARIO}/ /app/
 
-# Add benchmark scenario code, overriding anything from common
-COPY ./${BENCHMARK}/ /app/
-
-# Create venv
+# Create venv for scenario requirements (other than ddtrace)
 ENV VIRTUAL_ENV=/app/.venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
 RUN pip install -r requirements.txt
 
-# For performance testing
-ENV DDTRACE_GIT_COMMIT_ID ""
-ENV RUN_ID ""
-ENV PIP_INSTALL_WHEELS ""
-ENV SIRUN_NO_STDIO 0
+# Use separate venvs for the two versions of the library being compared
+ENV VENV_DDTRACE_V1=/app/.venv_ddtrace_v1/
+ENV VENV_DDTRACE_V2=/app/.venv_ddtrace_v2/
+ENV SCENARIO=${SCENARIO}
 
 ENTRYPOINT ["/app/entrypoint"]
 CMD ["/app/benchmark"]
