feat(cassandra): add support for latest (#2634)
* feat(cassandra): add support for latest

Also removing release 3.5 from the matrix as this was released about
5 years ago now and seems to be the cause of test flakiness.

* use latest only on 3.9

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -517,9 +517,9 @@ jobs:
           - MAX_HEAP_SIZE=512M
           - HEAP_NEWSIZE=256M
     steps:
-      - run_tox_scenario:
+      - run_test:
           wait: cassandra
-          pattern: '^cassandra_contrib-'
+          pattern: 'cassandra'
 
   celery:
     <<: *contrib_job
